dump for 0.1.2